# amplitude-data-wrapper

./: .gitignore  CODEOWNERS  LICENSE  Makefile  README.md  build_and_publish.sh  example-async.py  example.py  justfile  pyproject.toml  setup.cfg  testpypi_build_and_publish.sh
.github/workflows/: publish.yml
amplitude_data_wrapper/: analytics_api.py
requirements/: dev.in  dev.txt  main.txt
src/amplitude_data_wrapper/: __init__.py  analytics_api.py  async_api.py
src/examples/: example.py
