[metadata]
name = amplitude-data-wrapper
version = 0.4.1
description = python wrapper for using the amplitude analytics and taxonomy APIs
url = https://github.com/navikt/amplitude-data-wrapper
author = Tobias McVey
author_email = tobias.mcvey@nav.no
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:

[options.packages.find]
exclude =
    tests*
    testing*


