[metadata]
name = amplitude-data-wrapper
version = 0.4.3
description = python wrapper for using the amplitude analytics and taxonomy APIs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/navikt/amplitude-data-wrapper
author = Tobias McVey
author_email = tobias.mcvey@nav.no
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:

[options.packages.find]
exclude =
    tests*
    testing*


